# weatherdata

./: README.md  pyproject.toml
conda/: meta.yaml
doc/: environment.yml
doc/source/references/: index.rst  weatherdata.ipm.rst
example/: Weather_demonstration.ipynb  test.py  weather_demo.ipynb
src/openalea/weatherdata/: __init__.py  converters.py  ipm.py  units.py  weather_data.py  xarray_test.py
src/openalea/weatherdata/wralea/: __wralea__.py  adaptw.py
src/weatherdata/: converters.py  ipm.py  xarray_test.py
src/weatherdata/wralea/: adaptw.py
src/weatherdata/wralea/demo/: __wralea__.py
test/: test_fmi.py  test_landbruk.py  test_metnorway.py  test_weatherdata_ipm.py
